# wj-demo

./: .clang-format  .gitignore  CMakeLists.txt
json/: resolution-device-memory.json
src/utility/: utility.cpp  utility.h
test/: CMakeLists.txt
test/test-1/: CMakeLists.txt  test-1.cpp
test/test-cuda/: CMakeLists.txt  test-cuda.cpp
test/test-gpu-bandwidth/: CMakeLists.txt
test/test-utility/: CMakeLists.txt  test-utility.cpp
